--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 03.01.2025 13:43:38 | Praha: 3°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 04.01.2025 06:02:51 | Praha: -1°C, Jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky a předkrm </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s vejci a karotkou na másle</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"> TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený moravský vrabec, bramborové knedlíky s cibulkou, dušené bílé zelí</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo maštěná škvarky, grilovaná klobása, sázené vejce, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu se sázeným vejcem, smažené bramborové plátky, mexický dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Medailonky z vepřové panenky, sýrové grusetky promíchané fazolovými lusky s anglickou slaninou, zakysaná smetana</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine "Bolonese", strouhaný parmazán</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z krůtích prsou gratinovaný třemi druhy sýra, hranolky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný majonézovým dresinkem, filírované kuřecí prso, restovaná anglická slanina, vařené vejce</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,- Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a játrovými knedlíčky</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vejcem</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dršťková z hlívy ústřičné</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 11° Albín ALlk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda 27,-      0,5L Citronáda 34,-</td><td class="menuPrice"></td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Medailonky z krůtích prsou na jemné bylinkové omáčce, krokety</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">173,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky na divoko, dušená jasmínová rýže</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Filírovaná vepřová panenka na smetanovém listovém špenátu s restovanou anglickou slaninou, sázené vejce</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekané masové biftečky se sýrovou omáčkou, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Steak z kuřecích prsou zapečený s ananasem a sýrem, hranolky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti v BBQ omáčce se sázeným vejcem, smažené bramborové plátky</td><td class="menuPrice">217,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou ochucený majonézovým dresinkem, smažený hermelín</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Oslav s námi 20-ti leté výročí spolupráce s pivovarem Staropramen bezkonkurenčními cenami plechovkových piv. Ceny od 12,90 do 15,90 jsou platné 9.12. - 29.12.2024</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Citronáda</td><td class="menuPrice">27,- / 34,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -29,7 +29,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,13 +45,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Pátek 3.1.2025 </div>
+<div class="nadpis">Sobota 4.1.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Zavřeno</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -56,24 +58,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 3.1.2025 </div>
+<div class="nadpis">Sobota 4.1.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Česnečka</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Čočka na kyselo, vejce a klobása</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>Caesar salát </div>
-<div class="cena">150 Kč</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -118,7 +105,7 @@
 <section id="CSAntal"></section><a href="#top">&#x1F51D;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-None
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Zeleninový krém</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Vepřové výpečky, špenát, bramborové knedlíky</td><td>155 Kč</td></tr><tr><td>180g Smažený květák, vařené brambory, tatarka</td><td>154 Kč</td></tr><tr><td>150g Kuřecí kung-pao, jasmínová rýže</td><td>149 Kč</td></tr><tr><td>140g Šunková klobása, čočka na kyselo, cibulka, okurka</td><td>115 Kč</td></tr><tr><td><h3>Polední menu</h3></td><td>125 Kč</td></tr><tr><td>Zeleninový krém</td><td> </td></tr><tr><td>140g Šunková klobása, čočka na kyselo, cibulka, okurka</td><td> </td></tr><tr><td><h3>Buffet samoobslužný na váhu</h3></td><td> </td></tr><tr><td>Pečená brokolice s Portobello žampiony</td><td> </td></tr><tr><td>Pečená dýně s cizrnou, olivami a česnekem</td><td> </td></tr><tr><td>Zeleninový Jardiniére</td><td> </td></tr><tr><td>Rýžové nudle se zeleninou a Tonkatsu omáčkou</td><td> </td></tr><tr><td>Kuřecí prsa na medu a sušených švestkách</td><td> </td></tr><tr><td>Jasmínová rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>Live cooking ve woku</td><td> </td></tr><tr><td>Domácí těstoviny 150g / 300g</td><td> </td></tr><tr><td>Carbonarra (pancetta, vaječný žloutek), strouhaný parmezán</td><td>145 Kč</td></tr><tr><td>Fit 150g/ 300g:</td><td> </td></tr><tr><td>Italské risotto s pečenou dýní Hokaido, klíčky červené řepy a parmezánem</td><td>145 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
